--- a/app.css
+++ b/app.css
@@ -653,23 +653,23 @@ section.img,
 }
 
 /* SECCION INFORMATIVA */
-.u-section-6 {
+.section-detail {
   min-height: 575px
 }
 
-.u-section-6 .layout-wrap-1 {
+.section-detail .layout-wrap-1 {
   margin: 0 auto 0 0
 }
 
-.u-section-6 .layout-cell-1 {
+.section-detail .layout-cell-1 {
   min-height: 575px
 }
 
-.u-section-6 .container-layout-1 {
+.section-detail .container-layout-1 {
   padding: 60px 30px
 }
 
-.u-section-6 .text-1 {
+.section-detail .text-1 {
   text-transform: uppercase;
   letter-spacing: 10px;
   font-size     : 1.25rem;
@@ -677,44 +677,44 @@ section.img,
   margin        : 0
 }
 
-.u-section-6 .text-2 {
+.section-detail .text-2 {
   line-height: 1;
   font-size  : 2.25rem;
   margin     : 20px 0 0
 }
 
-.u-section-6 .img-1 {
+.section-detail .img-1 {
   background-image   : url("//images03.nicepage.io/a1389d7bc73adea1e1c1fb7e/d719a4f46ee35c3eac2f62f2/pexelsphoto3621726.jpeg");
   background-position: 50% 50%;
   min-height         : 575px
 }
 
-.u-section-6 .container-layout-2 {
+.section-detail .container-layout-2 {
   padding: 30px
 }
 
-.u-section-6 .layout-cell-3 {
+.section-detail .layout-cell-3 {
   min-height: 274px
 }
 
-.u-section-6 .container-layout-3 {
+.section-detail .container-layout-3 {
   padding: 60px
 }
 
-.u-section-6 .layout-cell-4 {
+.section-detail .layout-cell-4 {
   min-height: 301px
 }
 
-.u-section-6 .container-layout-4 {
+.section-detail .container-layout-4 {
   padding: 30px
 }
 
-.u-section-6 .text-3 {
+.section-detail .text-3 {
   margin-top   : 0;
   margin-bottom: 0
 }
 
-.u-section-6 .u-social-icons-1 {
+.section-detail .u-social-icons-1 {
   white-space: nowrap;
   height     : 25px;
   min-height : 16px;
@@ -723,120 +723,120 @@ section.img,
   margin     : 30px auto 0 0
 }
 
-.u-section-6 .icon-1 {
+.section-detail .icon-1 {
   height: 100%
 }
 
-.u-section-6 .icon-2 {
+.section-detail .icon-2 {
   height: 100%
 }
 
-.u-section-6 .icon-3 {
+.section-detail .icon-3 {
   height: 100%
 }
 
-.u-section-6 .icon-4 {
+.section-detail .icon-4 {
   height: 100%
 }
 
 @media (max-width: 1199px) {
-  .u-section-6 {
+  .section-detail {
     min-height: 474px
   }
 
-  .u-section-6 .layout-wrap-1 {
+  .section-detail .layout-wrap-1 {
     margin-right: initial;
     margin-left : initial
   }
 
-  .u-section-6 .layout-cell-1 {
+  .section-detail .layout-cell-1 {
     min-height: 474px
   }
 
-  .u-section-6 .img-1 {
+  .section-detail .img-1 {
     min-height: 474px
   }
 
-  .u-section-6 .layout-cell-3 {
+  .section-detail .layout-cell-3 {
     min-height: 226px
   }
 
-  .u-section-6 .layout-cell-4 {
+  .section-detail .layout-cell-4 {
     min-height: 248px
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-6 {
+  .section-detail {
     min-height: 1546px
   }
 
-  .u-section-6 .layout-cell-1 {
+  .section-detail .layout-cell-1 {
     min-height: 100px
   }
 
-  .u-section-6 .container-layout-1 {
+  .section-detail .container-layout-1 {
     padding-top   : 30px;
     padding-bottom: 30px
   }
 
-  .u-section-6 .img-1 {
+  .section-detail .img-1 {
     min-height: 519px
   }
 
-  .u-section-6 .layout-cell-3 {
+  .section-detail .layout-cell-3 {
     min-height: 692px
   }
 
-  .u-section-6 .container-layout-3 {
+  .section-detail .container-layout-3 {
     padding: 30px
   }
 
-  .u-section-6 .layout-cell-4 {
+  .section-detail .layout-cell-4 {
     min-height: 100px
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-6 {
+  .section-detail {
     min-height: 1114px
   }
 
-  .u-section-6 .container-layout-1 {
+  .section-detail .container-layout-1 {
     padding-left : 10px;
     padding-right: 10px
   }
 
-  .u-section-6 .img-1 {
+  .section-detail .img-1 {
     min-height: 779px
   }
 
-  .u-section-6 .container-layout-2 {
+  .section-detail .container-layout-2 {
     padding-left : 10px;
     padding-right: 10px
   }
 
-  .u-section-6 .layout-cell-3 {
+  .section-detail .layout-cell-3 {
     min-height: 519px
   }
 
-  .u-section-6 .container-layout-3 {
+  .section-detail .container-layout-3 {
     padding-left : 10px;
     padding-right: 10px
   }
 
-  .u-section-6 .container-layout-4 {
+  .section-detail .container-layout-4 {
     padding-left : 10px;
     padding-right: 10px
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-6 .img-1 {
+  .section-detail .img-1 {
     min-height: 490px
   }
 
-  .u-section-6 .layout-cell-3 {
+  .section-detail .layout-cell-3 {
     min-height: 327px
   }
 }
