--- a/app.css
+++ b/app.css
@@ -1,6 +1,8 @@
 :root {
-  --color-white: #ffffff;
-  --color-black: #0f0f0f;
+  --color-white       : #ffffff;
+  --color-black       : #0f0f0f;
+  --gradient-white-to-: linear-gradient(90deg, rgba(243, 243, 243, 1) 0%, rgba(246, 246, 246, 1) 50%, rgba(223, 223, 223, 1) 100%);
+  --light             : rgba();
 }
 
 * {
@@ -27,7 +29,6 @@ body {
   content: '';
   display: table;
 }
-
 
 .sheet {
   position: relative;
@@ -61,7 +62,7 @@ h1.title {
 }
 
 .color-black {
-  color: var(--color-black);
+  color: var(--color-black) !important;
 }
 
 .bg-white {
@@ -80,6 +81,19 @@ h1.title {
 .u-group.u-opacity {
   background-color: transparent !important;
   opacity         : 1;
+}
+
+.btn-black {
+  padding         : 10px 22px !important;
+  background-color: var(--color-black);
+  text-decoration : none;
+  color           : var(--color-white);
+  letter-spacing  : 2px;
+  font-weight     : bold;
+}
+
+.btn-black:hover {
+  background-color: var(--color-black);
 }
 
 @media (min-width: 1200px) {
@@ -654,7 +668,8 @@ section.img,
 
 /* SECCION INFORMATIVA */
 .section-detail {
-  min-height: 575px
+  height    : initial;
+  min-height: 575px;
 }
 
 .section-detail .layout-wrap-1 {
@@ -714,15 +729,6 @@ section.img,
   margin-bottom: 0
 }
 
-.section-detail .u-social-icons-1 {
-  white-space: nowrap;
-  height     : 25px;
-  min-height : 16px;
-  width      : 171px;
-  min-width  : 133px;
-  margin     : 30px auto 0 0
-}
-
 .section-detail .icon-1 {
   height: 100%
 }
@@ -768,7 +774,7 @@ section.img,
 
 @media (max-width: 991px) {
   .section-detail {
-    min-height: 1546px
+    min-height: 400px
   }
 
   .section-detail .layout-cell-1 {
@@ -842,33 +848,33 @@ section.img,
 }
 
 /* SECCION FRASE */
-.u-section-7 {
+.profile {
   min-height         : 665px;
   background-image   : url("//images03.nicepage.io/c461c07a441a5d220e8feb1a/b1969e4a3c4c5313a64f1459/ght.jpg");
   background-position: 50% 50%
 }
 
-.u-section-7 .layout-wrap-1 {
+.profile .layout-wrap-1 {
   width : calc((100% - 1140px) / 2 + 1140px);
   margin: 0 0 0 auto
 }
 
-.u-section-7 .layout-cell-1 {
+.profile .layout-cell-1 {
   min-height: 665px
 }
 
-.u-section-7 .container-layout-1 {
+.profile .container-layout-1 {
   padding: 60px 150px 60px 60px
 }
 
-.u-section-7 .text-1 {
+.profile .text-1 {
   font-size  : 2.25rem;
   font-family: "Playfair Display", serif;
   font-weight: 400;
   margin     : 0
 }
 
-.u-section-7 .text-2 {
+.profile .text-2 {
   font-size     : 1.25rem;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -876,12 +882,12 @@ section.img,
   margin        : 12px auto 0 0
 }
 
-.u-section-7 .text-3 {
+.profile .text-3 {
   font-style: normal;
   margin    : 28px 0 0
 }
 
-.u-section-7 .u-btn-1 {
+.profile .u-btn-1 {
   background-image: none;
   text-transform  : uppercase;
   letter-spacing  : 3px;
@@ -890,155 +896,146 @@ section.img,
   padding         : 10px 52px 10px 51px
 }
 
-.u-section-7 .img-1 {
+.profile .img-1 {
   min-height         : 665px;
   background-image   : url("//images03.nicepage.io/c461c07a441a5d220e8feb1a/69b47f260432574c8cf80820/sxxccc.jpg");
   background-position: 50% 50%
 }
 
-.u-section-7 .container-layout-2 {
+.profile .container-layout-2 {
   padding: 30px
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 {
+  .profile {
     min-height: 273px
   }
 
-  .u-section-7 .layout-wrap-1 {
+  .profile .layout-wrap-1 {
     width     : calc(((100% - 940px) / 2) + 940px);
     margin-top: 50px
   }
 
-  .u-section-7 .layout-cell-1 {
+  .profile .layout-cell-1 {
     min-height: 444px
   }
 
-  .u-section-7 .container-layout-1 {
+  .profile .container-layout-1 {
     padding-right: 65px
   }
 
-  .u-section-7 .img-1 {
+  .profile .img-1 {
     min-height: 444px
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-7 .layout-wrap-1 {
+  .profile .layout-wrap-1 {
     width: calc(((100% - 720px) / 2) + 720px)
   }
 
-  .u-section-7 .layout-cell-1 {
+  .profile .layout-cell-1 {
     min-height: 100px
   }
 
-  .u-section-7 .container-layout-1 {
+  .profile .container-layout-1 {
     padding: 30px
   }
 
-  .u-section-7 .img-1 {
+  .profile .img-1 {
     min-height: NaNpx
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-7 {
+  .profile {
     min-height: 1472px
   }
 
-  .u-section-7 .layout-wrap-1 {
+  .profile .layout-wrap-1 {
     margin-top  : 96px;
     margin-right: initial;
     margin-left : initial;
     width       : auto
   }
 
-  .u-section-7 .layout-cell-1 {
+  .profile .layout-cell-1 {
     min-height: 309px
   }
 
-  .u-section-7 .container-layout-1 {
+  .profile .container-layout-1 {
     padding-right: 10px;
     padding-left : 10px
   }
 
-  .u-section-7 .img-1 {
+  .profile .img-1 {
     min-height: 429px
   }
 
-  .u-section-7 .container-layout-2 {
+  .profile .container-layout-2 {
     padding-left : 10px;
     padding-right: 10px
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-7 {
+  .profile {
     min-height: 1533px
   }
 
-  .u-section-7 .layout-wrap-1 {
+  .profile .layout-wrap-1 {
     margin-top  : 50px;
     width       : auto;
     margin-right: initial;
     margin-left : initial
   }
 
-  .u-section-7 .layout-cell-1 {
+  .profile .layout-cell-1 {
     min-height: 344px
   }
 
-  .u-section-7 .img-1 {
+  .profile .img-1 {
     min-height: 455px
   }
 }
 
 /* SECCION CONTACTO */
-.u-section-8 {
+.information {
   background-image: none
 }
 
-.u-section-8 .sheet-1 {
+.information .sheet-1 {
   min-height: 400px
 }
 
-.u-section-8 .text-1 {
+.information .text-1 {
   line-height: 53px;
   font-weight: 400;
   font-size  : 2.25rem;
   margin     : 60px 114px 0
 }
 
-.u-section-8 .u-social-icons-1 {
-  white-space: nowrap;
-  height     : 32px;
-  min-height : 16px;
-  width      : 116px;
-  min-width  : 68px;
-  margin     : 30px auto 60px
-}
-
-.u-section-8 .icon-1 {
+.information .icon-1 {
   height: 100%
 }
 
-.u-section-8 .icon-2 {
+.information .icon-2 {
   height: 100%
 }
 
-.u-section-8 .icon-3 {
+.information .icon-3 {
   height: 100%
 }
 
 @media (max-width: 1199px) {
-  .u-section-8 .text-1 {
+  .information .text-1 {
     margin-left : 14px;
     margin-right: 14px
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-8 .text-1 {
+  .information .text-1 {
     margin-left : 0;
     margin-right: 0
   }
