--- a/app.css
+++ b/app.css
@@ -1120,7 +1120,7 @@ section.img,
   margin     : 20px 0 0 674px
 }
 
-.contact .u-form-1 {
+.contact .form-1 {
   height: 47px;
   margin: 30px 0 60px 641px
 }
@@ -1142,7 +1142,7 @@ section.img,
     margin-left: 474px
   }
 
-  .contact .u-form-1 {
+  .contact .form-1 {
     margin-left: 441px
   }
 }
@@ -1160,7 +1160,7 @@ section.img,
     margin-left: 254px
   }
 
-  .contact .u-form-1 {
+  .contact .form-1 {
     margin-left: 221px
   }
 }
@@ -1183,7 +1183,7 @@ section.img,
     margin-left: 74px
   }
 
-  .contact .u-form-1 {
+  .contact .form-1 {
     height     : 110px;
     margin-left: 202px
   }
@@ -1208,7 +1208,7 @@ section.img,
     text-align: center !important;
   }
 
-  .contact .u-form-1 {
+  .contact .form-1 {
     margin-left: 2px
   }
 }
